--- a/style.css
+++ b/style.css
@@ -26,6 +26,16 @@ header{
     overflow: hidden;
     object-fit: cover;
     opacity: 0.5;
+    animation: zoom 25s;
+}
+
+@keyframes zoom{
+    0%{
+        transform: scale(1.3);
+    }
+    100%{
+        transform: scale(1);
+    }
 }
 
 .banner{
@@ -40,6 +50,8 @@ header{
     font-family: "Cormorant Garamond", serif;
     font-weight: 500;
     text-shadow: .3rem .4rem 6px rgba(0,0,0,0.6);
+    opacity: 0;
+    animation: moveBanner 1s 0.5s forwards;
 }
 
 .banner p{
@@ -47,6 +59,8 @@ header{
     color: #fff ;
     font-size: 1.5rem;
     text-shadow: .2rem .2rem 6px rgba(0,0,0,0.6);
+    opacity: 0;
+    animation: moveBanner 1s 0.7s forwards;
 }
 
 .banner button{
@@ -60,4 +74,17 @@ header{
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
+    opacity: 0;
+    animation: moveBanner 1s 0.9s forwards;
+}
+
+@keyframes moveBanner{
+    0%{
+        transform: translateY(10rem) rotateY(-30deg); 
+    }
+    100%{
+        transform: translateY(0) rotateY(0);
+        opacity: 1;
+    }
 }
