--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300&family=Gowun+Batang&family=Libre+Baskerville:ital@0;1&family=Raleway:wght@100&family=Style+Script&display=swap');
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 
+@import url('https://fonts.googleapis.com/css2?family=Fenix&family=Open+Sans&display=swap');
+
 *{
     margin: 0;
     padding: 0;
+    list-style: none;
+    text-decoration: none;
+}
+
+:root{
+    --font-primary: "Fenix", serif;
+    --font-secundary: "Open Sans", serif;
+    --font-action: "Open Sans", serif;
 }
 
 header{
@@ -11,6 +21,72 @@ header{
     height: 100vh;
     overflow: hidden;
     position: relative;
+}
+
+.hamburguer{
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    z-index: 100;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+}
+
+.show-menu .hamburguer{
+    right: 16rem;
+}
+
+.line{
+    width: 100%;
+    height: .1rem;
+    background-color: #fff;
+    box-shadow: 0.1rem 0.1rem 1px #000;
+    transition: transform 1s;
+}
+
+.show-menu #line1{
+    transform: rotate(45deg) translate(0.2rem, .3rem);
+}
+
+.show-menu #line2{
+    opacity: 0;
+    visibility: hidden;
+}
+
+.show-menu #line3{
+    transform: rotate(-45deg) translate(0.2rem, -.5rem);
+}
+
+.hamburguer span{
+    position: absolute;
+    left: 3rem;
+    height: 2rem;
+    width: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    font-family: var(--font-action);
+    background-color: #870000;
+    opacity: 0;
+}
+
+.hamburguer span::before{
+    content: '';
+    position: absolute;
+    border-top: .5rem solid transparent;
+    border-right: .5rem solid #870000;
+    border-left: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    left: -1rem;
+}
+
+.show-menu .hamburguer:hover span{
+    opacity: 1;
 }
 
 .img-wrapper{
@@ -26,7 +102,7 @@ header{
     overflow: hidden;
     object-fit: cover;
     opacity: 0.5;
-    animation: zoom 25s;
+    animation: zoom 10s;
 }
 
 @keyframes zoom{
@@ -47,7 +123,7 @@ header{
 .banner h1{
     color: #ffffff;
     font-size: 4.5rem;
-    font-family: "Cormorant Garamond", serif;
+    font-family: "var(--font-primary)";
     font-weight: 500;
     text-shadow: .3rem .4rem 6px rgba(0,0,0,0.6);
     opacity: 0;
@@ -55,28 +131,29 @@ header{
 }
 
 .banner p{
-    font-family: "Gowun Batang", serif;
+    font-family: "var(--font-secundary)";
     color: #fff ;
     font-size: 1.5rem;
     text-shadow: .2rem .2rem 6px rgba(0,0,0,0.6);
     opacity: 0;
-    animation: moveBanner 1s 0.7s forwards;
+    animation: moveBanner 1s 0.8s forwards;
 }
 
 .banner button{
-    font-family: "Raleway";
+    font-family: "var(--font-action)";
     color: #fff;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    background: #ad5389; 
-    background: -webkit-linear-gradient(to right, #3c1053, #ad5389);  
-    background: linear-gradient(to right, #3c1053, #ad5389); 
+    font-size: 0.9rem;
+    text-transform: uppercase; 
+    margin-top: 1rem;
+    background: #870000;  
+    background: -webkit-linear-gradient(to right, #190A05, #870000); 
+    background: linear-gradient(to right, #190A05, #870000); 
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     opacity: 0;
-    animation: moveBanner 1s 0.9s forwards;
+    animation: moveBanner 1s 1.1s forwards;
 }
 
 @keyframes moveBanner{
@@ -87,4 +164,118 @@ header{
         transform: translateY(0) rotateY(0);
         opacity: 1;
     }
+}
+
+.sidebar{
+    width: 20rem;
+    height: 100vh;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    right: -20rem;
+    transition: all 1s;
+}
+
+.show-menu .sidebar{
+    right: 0;
+}
+
+.menu{
+    position: absolute;
+    top: 30%;
+    left: 20%;
+    transform: translate(-50% -50%);
+}
+
+.menu-item{
+    text-align: center;
+    margin-bottom: .4rem;
+}
+
+.menu-link{
+    font-family: "var(--font-secundary)";
+    font-size: 2rem;
+    color: #555;
+    transition: color 1s;
+}
+
+.menu-link:hover{
+    color: #870000;
+}
+
+.social-media{
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.social-media i{
+    color: rgb(112, 23, 129);
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.social-media i:hover{
+    color: #870000;
+}
+
+.conhecimentos{
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(6, 6rem);
+    row-gap: .5rem;
+}
+
+.conhecimento:nth-child(1){
+    grid-column: 4 / 7;
+    grid-row: 1 / 3;
+}
+
+.conhecimento:nth-child(2){
+    grid-column: 3 / 6;
+    grid-row: 3 / 5;
+}
+
+.conhecimento:nth-child(3){
+    grid-column: 4 / 7;
+    grid-row: 5 / -1;
+}
+
+.conhecimento:nth-child(4){
+    grid-column: 11 / 14;
+    grid-row: 1 / 3;
+}
+
+.conhecimento:nth-child(5){
+    grid-column: 12 / 15;
+    grid-row: 3 / 5;
+}
+
+.conhecimento:nth-child(6){
+    grid-column: 11 / 14;
+    grid-row: 5 / -1;
+}
+
+.sessao-conhecimentos{
+    background-color: rgb(248, 213, 234);
+}
+
+.sessao-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sessao-header h1{
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    color: gray;
+    border-bottom: solid 3px #870000;
+    margin-bottom: 1.5rem;
 }
